--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.1"
+    "mongoose": "^8.10.1",
+    "whatwg-url": "^14.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
